--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>日本、韓國、新加坡、馬來西亞2001-2021來台旅客數</title>
+	<title>日本、韓國、新加坡、馬來西亞三國2001-2021來台旅客數</title>
 	<style>
 		.center {
 		  text-align: center;
-		  width: 70%;
+		  width: 80%;
 		  border: 1px;
 		  margin: auto;
 		  padding: 10%;
@@ -17,8 +17,7 @@
 </head>
 <body>
 	<div class="center">
-		<h1>日本、韓國、新加坡、馬來西亞2001-2021來台旅客數</h1>
-		<br>
+		<h1>日本、韓國、新加坡、馬來西亞三國2001-2021來台旅客數</h1>
 		<img src="日旗.png">&nbsp;<img src="韓旗.jpg">&nbsp;<img src="新旗.png">&nbsp;<img src="馬旗.png">
 		<br>
 		<iframe frameborder="0" src="1122barchart.html" width="100%" height="650px"></iframe>
